Code Refactoring remove unused consoles

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -57,9 +57,7 @@
         </div>
 
   <button (click)="any($event)">Method 1</button>
-  <!-- <button (click)="any2($event)">Method 2</button>
-  <button (click)="any3($event)">Method 3</button>
-  <button (click)="any4($event)">Method 4</button> -->
+
 
         <!-- table -->
         <div class="col-lg-12">
@@ -188,7 +186,7 @@
             totalCancelledPoRowCount }}</span>
         </ng-template>
         <!-- <app-projects-cancelled-po></app-projects-cancelled-po> -->
-        <app-projects-cancelled-po [child_id]=ChildForm (uploaded)="someMethod($event)"></app-projects-cancelled-po>
+        <app-projects-cancelled-po [child_id]=ChildForm (uploaded)="ChildMethod($event)"></app-projects-cancelled-po>
       </mat-tab>
     </mat-tab-group>
   </div>
