Approved Nearly Expiry and warehouse Reject Approval Done

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -35,28 +35,22 @@
             </div>
 
             <div>
-  
-          </div>
+
+            </div>
 
             <div class="p-2">
               <div class="input-group searchBtnStyle">
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                 </div>
-                <input type="search" 
-                class="form-control" 
-                placeholder="Find here...." 
-                id="txtSearchText" 
-                name="SearchText"
-                autocomplete="off"
-                [(ngModel)]="searchText" 
-                (keyup)="onSearchTextKeyup($event)" />
+                <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText"
+                  name="SearchText" autocomplete="off" [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
               </div>
             </div>
           </div>
         </div>
 
-  <button (click)="any($event)">Method 1</button>
+        <!-- <button (click)="any($event)">Method 1</button> -->
 
 
         <!-- table -->
