Fiexed the Viewing of Rejected Status in QC Receiving

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -994,10 +994,10 @@
           <!-- Reject Information  -->
           <div class="partition-div">Reject Information</div>
           <div class="rejection-buttons">
-            <button class="btn-add" (click)="onAddAdditionalRejectRow($event)">
+            <button class="btn-add btn btn-danger btn-sm mr-2" (click)="onAddAdditionalRejectRow($event)">
               Add
             </button>
-            <button class="btn-undo" class="ml-80" id="remove-remarks-button"
+            <button class="btn btn-info btn-sm" id="remove-remarks-button"
               (click)="onRemoveAdditionalRejectRow($event)">
               Undo
             </button>
@@ -1006,8 +1006,8 @@
             <div class="box-1">
               <!-- Start of Validation Sample using animal -->
 
-              <div class="form-group row" id="rejectionrow1">
-                <!-- <label for="drpEditClientLocationsOne" class="col-sm-4 col-form-label">Reject Status 1</label> -->
+              <div class="form-group row form_display--displayhide" id="rejectionrow1">
+
                 <div class="col-sm-8">
                   <mat-form-field appearance="fill">
                     <mat-label>Rejected Status</mat-label>
@@ -1023,7 +1023,7 @@
                 </div>
               </div>
 
-              <div class="form-group row" id="rejectionrow2">
+              <div class="form-group row form_display--displayhide" id="rejectionrow2">
                 <div class="col-sm-8">
                   <mat-form-field appearance="fill">
                     <mat-label>Rejected Status</mat-label>
@@ -1037,7 +1037,7 @@
                 </div>
               </div>
 
-              <div class="form-group row" id="rejectionrow32" #rejectedStatusElementNo3>
+              <div class="form-group row form_display--displayhide" id="rejectionrow32" #rejectedStatusElementNo3>
                 <div class="col-sm-8">
                   <mat-form-field appearance="fill">
                     <mat-label>Rejected Status</mat-label>
@@ -1052,7 +1052,7 @@
                 </div>
               </div>
 
-              <div class="form-group row" id="total-reject">
+              <div class="form-group row form_display--displayhide" id="total-reject">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" matInput name="total_of_reject_mat" [(ngModel)]="editProject.total_of_reject_mat"
@@ -1066,7 +1066,7 @@
             </div>
 
             <div class="box-2">
-              <div class="form-group row" id="rejectionrow12">
+              <div class="form-group row form_display--displayhide" id="rejectionrow12">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" name="count_of_reject_one" matInput #rejectNo1
@@ -1095,7 +1095,7 @@
                 </div>
               </div>
 
-              <div class="form-group row" id="rejectionrow22">
+              <div class="form-group row form_display--displayhide" id="rejectionrow22">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" name="count_of_reject_two" matInput #rejectNo2
@@ -1117,7 +1117,7 @@
                 </div>
               </div>
 
-              <div class="form-group row" id="rejectionrow3">
+              <div class="form-group row form_display--displayhide" id="rejectionrow3">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" name="count_of_reject_three" matInput #rejectNo3
@@ -1139,15 +1139,13 @@
                 </div>
               </div>
 
-              <div class="form-group row" id="total-confirm-reject">
+              <div class="form-group row form_display--displayhide" id="total-confirm-reject">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" matInput name="total_of_reject_mat" [(ngModel)]="editProject.total_of_reject_mat"
                       #confirmReject (keyup)="ConfirmNoofReject($event)" (keypress)="validateNumber($event)" />
                     <mat-label>Confirm No. of Reject</mat-label>
                     <mat-hint align="end">Confirmation</mat-hint>
-                    <!-- <mat-icon matPrefix>list<span class="material-icons-outlined">
-                </span></mat-icon> -->
                     <span class="text-danger rejectIsnotMactchSpanTagclass" #rejectIsnotMactchSpanTag></span>
                   </mat-form-field>
                 </div>
