Add UserModule Binding and Model

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -1006,7 +1006,7 @@
             <div class="box-1">
               <!-- Start of Validation Sample using animal -->
 
-              <div class="form-group row form_display--displayhide" id="rejectionrow1">
+              <div class="form-group row" id="rejectionrow1">
                 <!-- <label for="drpEditClientLocationsOne" class="col-sm-4 col-form-label">Reject Status 1</label> -->
                 <div class="col-sm-8">
                   <mat-form-field appearance="fill">
@@ -1023,7 +1023,7 @@
                 </div>
               </div>
 
-              <div class="form-group row form_display--displayhide" id="rejectionrow2">
+              <div class="form-group row" id="rejectionrow2">
                 <div class="col-sm-8">
                   <mat-form-field appearance="fill">
                     <mat-label>Rejected Status</mat-label>
@@ -1037,7 +1037,7 @@
                 </div>
               </div>
 
-              <div class="form-group row form_display--displayhide" id="rejectionrow32" #rejectedStatusElementNo3>
+              <div class="form-group row" id="rejectionrow32" #rejectedStatusElementNo3>
                 <div class="col-sm-8">
                   <mat-form-field appearance="fill">
                     <mat-label>Rejected Status</mat-label>
@@ -1052,7 +1052,7 @@
                 </div>
               </div>
 
-              <div class="form-group row form_display--displayhide" id="total-reject">
+              <div class="form-group row" id="total-reject">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" matInput name="total_of_reject_mat" [(ngModel)]="editProject.total_of_reject_mat"
@@ -1066,7 +1066,7 @@
             </div>
 
             <div class="box-2">
-              <div class="form-group row form_display--displayhide" id="rejectionrow12">
+              <div class="form-group row" id="rejectionrow12">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" name="count_of_reject_one" matInput #rejectNo1
@@ -1095,7 +1095,7 @@
                 </div>
               </div>
 
-              <div class="form-group row form_display--displayhide" id="rejectionrow22">
+              <div class="form-group row" id="rejectionrow22">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" name="count_of_reject_two" matInput #rejectNo2
@@ -1117,7 +1117,7 @@
                 </div>
               </div>
 
-              <div class="form-group row form_display--displayhide" id="rejectionrow3">
+              <div class="form-group row" id="rejectionrow3">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" name="count_of_reject_three" matInput #rejectNo3
@@ -1139,7 +1139,7 @@
                 </div>
               </div>
 
-              <div class="form-group row form_display--displayhide" id="total-confirm-reject">
+              <div class="form-group row" id="total-confirm-reject">
                 <div class="col-sm-8">
                   <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                     <input type="text" matInput name="total_of_reject_mat" [(ngModel)]="editProject.total_of_reject_mat"
