Add Parent Main Modules

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -232,14 +232,12 @@
           <mat-icon>settings_suggest</mat-icon>&nbsp;Set Up
         </a>
         <mat-menu #menu="matMenu">
+      
           <button mat-menu-item>
             <!-- <mat-icon>people</mat-icon> -->
-            <span [routerLink]=" [ '/admin', 'masters','user' ] ">User Role</span>
+            <span [routerLink]=" [ '/admin','parent-main-modules' ] ">User Modules</span>
           </button>
-          <button mat-menu-item>
-            <!-- <mat-icon>people</mat-icon> -->
-            <span [routerLink]=" [ '/admin', 'masters','user' ] ">User Modules</span>
-          </button>
+
           <button mat-menu-item>
             <!-- <mat-icon>people</mat-icon> -->
             <span [routerLink]=" [ '/admin', 'masters','user' ] ">User Management</span>
