Insert Data in Front End Main Menus

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -235,7 +235,7 @@
       
           <button mat-menu-item>
             <!-- <mat-icon>people</mat-icon> -->
-            <span [routerLink]=" [ '/admin','parent-main-modules' ] ">User Modules</span>
+            <span [routerLink]=" [ '/admin','masters','parent-main-modules' ] ">User Modules</span>
           </button>
 
           <button mat-menu-item>
