--- a/app/admin/components/parent-main-modules/parent-main-modules.component.html
+++ b/app/admin/components/parent-main-modules/parent-main-modules.component.html
@@ -1,1 +1,247 @@
-<p>parent-main-modules works!</p>
+<h5>
+    <!-- Reject Status -->
+    <i class="fa fa-circle-o-notch fa-spin" style="font-size:24px" *ngIf="showLoading"></i>
+  </h5>
+  
+  <div class="row">
+  
+    <div class="col-sm-12">
+      <div class="d-flex">
+  
+        <div class="p-2">
+          <div class="input-group searchBtnStyle">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+            </div>
+              <select class="form-control" id="drpSearchBy" name="SearchBy" (change)="onFilterStatus($event.target.value)" >
+                <option value="">All</option>
+                <option value="Active">Active</option>
+                <option value="InActive">InActive</option>
+              </select>
+          </div>
+        </div>
+  
+        <div class="p-2">
+          <div class="input-group searchBtnStyle">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+            </div>
+            <input type="text" class="form-control " placeholder="Find here...." id="txtSearchText" name="SearchText" [(ngModel)]="searchText" (keyup)="onSearchTextChange($event)">
+          </div>
+        </div>
+        <div class="ml-auto p-2">
+          <button  class="addbtnStyle" data-toggle="modal" data-target="#newDataModal" data-backdrop="false" data-keyboard="false" (click)="onNewClick($event)"><span class="fa fa-plus"> </span> Add Procedure</button>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-xl-12">
+      <div class="d-flex">
+        <div class="col-xl-12 col-lg-9 mx-auto scrollableTable">
+          <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+            <tr class="text-light header-bg-color-um system-name">
+              <!-- <th>
+                No.
+                <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'id' " (click)="sortBy = 'id'; sortOrder = 'ASC' "></i>
+                <i class="fa fa-sort-up hand-icon text-primary" *ngIf="sortBy == 'id' && sortOrder == 'ASC' " (click)="sortOrder = 'DESC' "></i>
+                <i class="fa fa-sort-down hand-icon text-primary" *ngIf="sortBy == 'id' && sortOrder == 'DESC' " (click)="sortOrder = 'ASC' "></i>
+              </th> -->
+              <th style="width:60%">
+                Description
+                <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'lab_description' " (click)="sortBy = 'lab_description'; sortOrder = 'ASC' "></i>
+                <i class="fa fa-sort-up hand-icon text-primary" *ngIf="sortBy == 'lab_description' && sortOrder == 'ASC' " (click)="sortOrder = 'DESC' "></i>
+                <i class="fa fa-sort-down hand-icon text-primary" *ngIf="sortBy == 'lab_description' && sortOrder == 'DESC' " (click)="sortOrder = 'ASC' "></i>
+              </th>
+              <th style="width: 20%;">Status</th>
+              <!-- <th>Created Date</th>
+              <th>Created By</th> -->
+              <th class="text-center" style="width:20%">Actions</th>
+            </tr>
+            <tr *ngFor="let labTestProc of mainMenus | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
+              <!-- <td>{{labTestProc.id}}</td> -->
+              <td>{{labTestProc.moduleName}}</td>
+              <td>{{labTestProc.isActive}}</td>
+              <!-- <td>{{labTestProc.created_at}}</td>
+              <td>{{labTestProc.created_by}}</td> -->
+              <td class="text-center">
+                <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, labTestProc)" data-toggle="modal" data-target="#editLabProcedureModal" data-backdrop="false" data-keyboard="false"><mat-icon> update</mat-icon></button>&nbsp;
+                <!-- <button mat-stroked-button color="warn" (click)="onDeleteClick($event, labTestProc)" data-toggle="modal" data-target="#deleteModal" data-backdrop="false" data-keyboard="false">Delete</button> -->
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-12">
+      <ul class="pagination justify-content-center mt-1">
+        <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+          <a mat-stroked-button color="primary" class="mr-1" href="#" onclick="return false">Prev</a>
+        </li>
+  
+        <ng-container *ngIf="pages.length <= 10">
+          <li class="page-item" *ngFor="let page of pages" [ngClass]="{ 'active': page.pageIndex == currentPageIndex}" (click)="onPageIndexClicked(page.pageIndex)">
+            <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
+          </li>
+        </ng-container>
+  
+        <ng-container *ngIf="pages.length > 10">
+          <li class="page-item" [ngClass]="{ 'active': currentPageIndex == 0}" (click)="onPageIndexClicked(0)">
+            <a class="page-link" href="#" onclick="return false">1</a>
+          </li>
+  
+          <li class="page-item" [ngClass]="{ 'active': currentPageIndex == 1}" (click)="onPageIndexClicked(1)">
+            <a class="page-link" href="#" onclick="return false">2</a>
+          </li>
+  
+          <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+  
+          <li class="page-item" [ngClass]=" 'active' " (click)="onPageIndexClicked(currentPageIndex)" *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
+            <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+          </li>
+  
+          <li>&nbsp;...&nbsp;</li>
+  
+          <li class="page-item" [ngClass]="{ 'active': currentPageIndex == pages.length - 2}" (click)="onPageIndexClicked(pages.length - 2)">
+            <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+          </li>
+  
+          <li class="page-item" [ngClass]="{ 'active': currentPageIndex == pages.length - 1}" (click)="onPageIndexClicked(pages.length - 1)">
+            <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+          </li>
+        </ng-container>
+  
+        <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+          <a mat-stroked-button color="primary" class="ml-1" href="#" onclick="return false">Next</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
+  <!-- Add Lab Test Procedure -->
+  <form novalidate="novalidate" [formGroup]="newForm">
+    <div class="modal" role="dialog" id="newDataModal">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header bg-all text-white">
+            <div class="modal-title">Append Main Module</div>
+            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          </div>
+          <div class="modal-body">
+  
+            <div class="form-group row">
+              <label for="txtDescription" class="col-sm-4 col-form-label">Description</label>
+              <div class="col-sm-8">
+                <input type="text" 
+                autocomplete="off" 
+                id="modulename" 
+                class="form-control" 
+                placeholder="Description" 
+                name="modulename"  
+                formControlName="modulename" 
+                maxlength="30" #defaultTextBox_New 
+                [ngClass]="{ 'is-invalid': newForm.get('modulename').invalid 
+                && (newForm.get('modulename').dirty || newForm.get('modulename').touched || newForm.valid), 
+                'is-valid': newForm.get('modulename').valid && (newForm.get('modulename').dirty 
+                || newForm.get('modulename').touched || newForm.valid) }" #LabTestProcedureDesc>
+                <span class="text-danger" *ngIf="newForm.get('modulename').invalid 
+                && (newForm.get('modulename').dirty || newForm.get('modulename').touched || newForm.valid) 
+                && newForm.get('modulename').errors?.required">Description can't be blank!</span>
+              </div>
+            </div>
+  
+
+
+            <div class="form-group row visibility-false">
+              <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
+              <div class="col-sm-8">
+                <input type="text" readonly class="form-control" [(ngModel)] = "activeUser"  formControlName="addedby">
+            
+              </div>
+            </div>
+  
+          </div>
+          <div class="modal-footer">
+            <button mat-stroked-button color="accent" class="mr-1" data-dismiss="modal" id="newLabTestProcedureCancelModal" type="button">Cancel</button>
+            <button mat-stroked-button color="primary" [disabled]="!newForm.valid"  (click)="onSaveClick()">Save</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+  
+  <!-- Edit Lab Test Procedure -->
+  <form novalidate="novalidate" [formGroup]="editForm">
+    <div class="modal" role="dialog" id="editLabProcedureModal">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header bg-all text-white">
+            <div class="modal-title">Edit Laboratory Procedure</div>
+            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group row">
+              <label for="txtEditClientLocationName" class="col-sm-4 col-form-label">Description</label>
+              <div class="col-sm-8">
+                <input type="text" autocomplete="off" id="txtlab_description" class="form-control" placeholder="lab_description" name="lab_description" formControlName="lab_description" maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('lab_description').invalid && (editForm.get('lab_description').dirty || editForm.get('lab_description').touched || editForm.valid), 'is-valid': editForm.get('lab_description').valid && (editForm.get('lab_description').dirty || editForm.get('lab_description').touched || editForm.valid) }">
+                <span class="text-danger" *ngIf="editForm.get('lab_description').invalid && (editForm.get('lab_description').dirty || editForm.get('lab_description').touched || editForm.valid) && editForm.get('lab_description').errors?.required">Status can't be blank</span>
+              </div>
+            </div>
+  
+            <div class="form-group row">
+              <label for="drpEditClientLocation" class="col-sm-4 col-form-label">Status </label>
+              <div class="col-sm-8">
+                <select id="txtis_active_status_status" class="form-control" name="is_active_status" formControlName="is_active_status" maxlength="30" #defaultTextBox_New [ngClass]="{ 'is-invalid': editForm.get('is_active_status').invalid && (editForm.get('is_active_status').dirty || editForm.get('is_active_status').touched || editForm.valid), 'is-valid': editForm.get('is_active_status').valid && (editForm.get('is_active_status').dirty || editForm.get('is_active_status').touched || editForm.valid) }" #UpdateLabTestProcedureDesc>
+                  <option value="null">Please Select</option>
+                  <option *ngFor="let SystemCapabilityStatus of samples | async" [value]="SystemCapabilityStatus.current_system_status">
+                    {{SystemCapabilityStatus.current_system_status}}
+                  </option>
+                </select>
+                <span class="text-danger" *ngIf="editForm.get('is_active_status').invalid && (editForm.get('is_active_status').dirty || editForm.get('is_active_status').touched || editForm.valid) && editForm.get('is_active_status').errors?.required">Status can't be blank</span>
+              </div>
+            </div>
+  
+          </div>
+          <div class="modal-footer">
+            <button mat-stroked-button color="accent" class="mr-1" id="editLabTestProcedureCancelModal" data-dismiss="modal" type="button">Cancel</button>
+            <button mat-stroked-button color="primary" [disabled]="!editForm.valid" (click)="onUpdateClick()">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+  
+  <!-- Delete Lab Test Procedure -->
+  <form>
+    <div class="modal" role="dialog" id="deleteModal">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header bg-primary text-white">
+            <div class="modal-title">Delete Status</div>
+            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          </div>
+          <div class="modal-body">
+  
+  
+            <div class="form-group row">
+  
+              <mat-form-field class="w-100" floatLabel="auto" appearance="standard" color="primary">
+                <input type="text" matInput id="txtStatusName" placeholder="Status" name="status_name" [(ngModel)]="deleteRejectStatus.lab_description" disabled="disabled" #DeleteLabTestProcedureDesc>
+                <mat-label>Description</mat-label>
+                <!-- <mat-hint align="end">The subject of the transaction</mat-hint> -->
+                <mat-icon matPrefix>info<span class="material-icons-outlined">
+                </span>
+                </mat-icon>
+            </mat-form-field>
+            </div>
+  
+          </div>
+          <div class="modal-footer">
+            <!-- <button class="btn btn-warning" data-dismiss="modal" type="button">Cancel</button> -->
+            <button mat-stroked-button color="warn" data-dismiss="modal" (click)="onDeleteConfirmClick()">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+  
